# tt-llk

./: .clang-format  .clang-format-ignore  .clangd  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  :w  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  README.md  STATIC_ASSERTS_SUMMARY.md  clean_sim.sh  compare_perf.py  compare_perf_csv.py  compare_perf_output.txt  counter_metrics_dump.txt  eltwise_overhead_output.txt  explore.py  package.json  run_perf_branch.sh  run_perf_counters.sh  run_perf_main.sh  scan.py  server.sh  server_emu.sh  server_sim.sh  setup_clangd.sh  setup_tests.sh  some_temp_file.txt  test_xmov_refactor.cpp
.claude/: CLAUDE.md
.github/: .dockerignore  Dockerfile.base  Dockerfile.ci  Dockerfile.ird  Dockerfile.ird.slim  build-docker-images.sh  get-docker-tag.sh  pull_request_template.md  spdx_ignore.yaml
cmake/: tt-llk-config.cmake.in
codegen/: CLAUDE.md  PLAN.md  README.md
codegen-bh/: CLAUDE.md  GUIDE.md  __init__.py
common/: llk_assert.h  tensor_shape.h
counter_dumps/: disasm_no_counters.txt  disasm_with_counters.txt  perf_eltwise_binary_fpu_comparison_output.txt  perf_eltwise_binary_fpu_counters.txt  perf_matmul_comparison_output.txt  perf_matmul_counters.txt  perf_pack_untilize_comparison_output.txt  perf_pack_untilize_counters.txt  perf_unpack_tilize_comparison_output.txt  perf_unpack_tilize_counters.txt  perf_unpack_untilize_comparison_output.txt  perf_unpack_untilize_counters.txt
coverage_report_blackhole/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report_wormhole/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
docs/: Introduction_to_asserts.md  assembly_blackhole_to_quasar_changes.md  bfp4_b_implementation_reference.md  migration_guide.md  top_level_overview.md
featuregen/: CLAUDE.md  README.md
html/: annotated.html  ckernel__sfpu__reshuffle__rows_8h.html  ckernel__sfpu__reshuffle__rows_8h_source.html  classckernel_1_1ckernel__template-members.html  classckernel_1_1ckernel__template.html  classckernel_1_1ckernel__unpack__template-members.html  classckernel_1_1ckernel__unpack__template.html  classes.html  dir_0af0c0a8b48b16d79252e6a433e46c9b.html  dir_15ca77fef5b012aef8e1d178aa72770e.html  dir_27ef2860da71080578a7345670e2abcd.html  dir_4fcb98ed5288c2c20fc02f39e7caa480.html  dir_5485ef706e7059f96eb5b66ed65f8247.html  dir_590b06ee9e545a9c80153f7b71699098.html  dir_659db8d21c0dea6219f6e59e3e73dae9.html  dir_7daf41ec3ed9d964762698ea33dd9eac.html  dir_ca45e3527dc999dc519b13bed7363115.html  dir_f7fd672f3a3a831665a78283d5beab8e.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  (+548 more)
infra/: check_copyright_config.yaml  combine_coverage_files.py  fix_cstdint.py  run_order_processing.py  validate_copyright.py
latex/: annotated.tex  ckernel__sfpu__reshuffle__rows_8h.tex  classckernel_1_1ckernel__template.tex  classckernel_1_1ckernel__unpack__template.tex  dir_0af0c0a8b48b16d79252e6a433e46c9b.tex  dir_15ca77fef5b012aef8e1d178aa72770e.tex  dir_27ef2860da71080578a7345670e2abcd.tex  dir_4fcb98ed5288c2c20fc02f39e7caa480.tex  dir_5485ef706e7059f96eb5b66ed65f8247.tex  dir_590b06ee9e545a9c80153f7b71699098.tex  dir_659db8d21c0dea6219f6e59e3e73dae9.tex  dir_7daf41ec3ed9d964762698ea33dd9eac.tex  dir_ca45e3527dc999dc519b13bed7363115.tex  dir_f7fd672f3a3a831665a78283d5beab8e.tex  files.tex  namespaceckernel.tex  namespaceckernel_1_1internal.tex  namespaceckernel_1_1math.tex  namespaceckernel_1_1packer.tex  namespaceckernel_1_1sfpu.tex  namespaceckernel_1_1unpacker.tex  namespaces.tex  namespacesfpi__test.tex  refman.tex  structckernel_1_1mutex.tex  (+212 more)
(+2190 files in other folders)
